--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.ulan.timetable">
+
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
@@ -46,6 +47,14 @@
             android:name=".Activities.TeachersActivity"
             android:label="Teachers"
             android:parentActivityName=".Activities.MainActivity" />
+        <activity
+            android:name=".Activities.SettingsActivity"
+            android:label="Settings"
+            android:parentActivityName=".Activities.MainActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".Activities.MainActivity" />
+        </activity>
     </application>
 
 </manifest>
