--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -55,6 +55,10 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".Activities.MainActivity" />
         </activity>
+        <activity
+            android:name=".Activities.ExamsActivity"
+            android:label="Exams"
+            android:parentActivityName=".Activities.MainActivity" />
     </application>
 
 </manifest>
