--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -68,6 +68,9 @@
             android:name=".activities.ExamsActivity"
             android:label="Exams"
             android:parentActivityName=".activities.MainActivity" />
+        <activity
+            android:name="com.mikepenz.aboutlibraries.ui.LibsActivity"
+            android:theme="@style/Theme.MaterialComponents.DayNight.NoActionBar" />
 
         <receiver
             android:name=".receivers.NotificationDismissButtonReceiver"
