--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
     compileSdkVersion 29
     defaultConfig {
         applicationId "com.ulan.timetable"
-        minSdkVersion 17
+        minSdkVersion 19
         targetSdkVersion 29
         versionCode 10
         versionName "1.0"
@@ -60,4 +60,6 @@ dependencies {
     implementation 'com.afollestad.material-dialogs:core:0.9.6'
     implementation 'com.afollestad.material-dialogs:commons:0.9.6.0'
     implementation 'com.github.IamIsPra:Sheriff:1.0.0'
+    implementation 'com.github.asdoi:TimetableUI:1386c4216b'
+    implementation 'com.github.asdoi:TimetableView:master-SNAPSHOT'
 }
