--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,7 @@
         android:theme="@style/SplashTheme">
         <activity
             android:name=".activities.MainActivity"
+            android:configChanges="orientation|screenSize|keyboardHidden"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -60,6 +61,7 @@
             android:parentActivityName=".activities.MainActivity" />
         <activity
             android:name=".activities.SummaryActivity"
+            android:configChanges="orientation|screenSize|keyboardHidden"
             android:label="@string/summary_activity_title"
             android:parentActivityName=".activities.MainActivity" />
         <activity
