--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -65,8 +65,8 @@
             android:label="@string/summary_activity_title"
             android:parentActivityName=".activities.MainActivity" />
         <activity
-            android:name=".activities.SummarySettingsActivity"
-            android:label="@string/action_settings"
+            android:name=".activities.TimeSettingsActivity"
+            android:label="@string/time_settings"
             android:parentActivityName=".activities.SummaryActivity" />
         <activity
             android:name="com.mikepenz.aboutlibraries.ui.LibsActivity"
